# staticviking

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  contentful.py  distribute  netlify.toml  requirements.txt  setup.cfg  setup.py
content/: about-us.md  contact.md
content/posts/10-reasons-why-software-developer-is-a-great-career-choice/: index.md
content/posts/cool-blog-post/: index.md
content/posts/happy-developers-it-is-possible/: index.md
content/posts/war-room-wisdom-for-software-developers/: index.md
staticviking/: staticviking.py
staticviking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
staticviking/content/: about.md  contact.md
staticviking/content/posts/10-reasons-why-software-developer-is-a-great-career-choice/: index.md
staticviking/content/posts/happy-developers-it-is-possible/: index.md
staticviking/content/posts/war-room-wisdom-for-software-developers/: index.md
staticviking/templates/: contact.html  footer.html  javascript.html  listing.html  macros.html  navbar.html  post.html  redirect.html  sidebar.html  sitemap.xml
staticviking/templates/to_copy/static/css/: single-blog.css  style.css
staticviking2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
