[metadata]
description-file = README.md

[options]
packages = find:
zip_safe = True
python_requires = >=3.8.0
install_requires =
    Jinja2             == 3.1.2
    python-slugify     == 7.0.0
    python-frontmatter == 1.0.0
    docopt             == 0.6.2
    Markdown           == 3.4.1
    htmlmin            == 0.1.12
    Pillow             >= 10
